--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular/material": "11.2.13",
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
