--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
-    "bootstrap": "^5.0.0-beta3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.5.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular/material": "11.2.13",
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@angular/localize": "^11.2.10",
+    "@angular/material": "11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
