--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.5.0",
@@ -32,7 +34,7 @@
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@angular/localize": "^11.2.10",
-    "@angular/material": "11.2.13",
+    "@angular/material": "^11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
